apps/argocd/argocd-ingress.yaml
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  name: argocd-server-ingress
  namespace: argocd
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  spec:
    ingressClassName: nginx
    tls:
      - hosts:
          - argocd.93.77.177.167.nip.io
        secretName: argocd-tls
    rules:
      - host: argocd.93.77.177.167.nip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 443
